--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
     "client": "serve build"
-  }
+  },
+  "proxy": "https://api.douban.com"
 }
