--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.6.1",
     "rc-queue-anim": "^1.5.0",
     "react": "^16.3.2",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
